2012-01-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Get rid of temporary member MaxWordSeg::sepIdx.

	Its only use was to pass value between CreateSentence() and
	saveSegment() methods. This should be done via function arg instead.

	The other occurrence of "sepIdx" in WordSegArea() is already local
	var, and thus irrelevant.

	* src/maxwordseg.h, src/maxwordseg.cpp (MaxWordSeg::saveSegment):
	  - Add "sepIdx" arg and return its updated value when finished.
	* src/maxwordseg.cpp (MaxWordSeg::CreateSentence):
	  - Declare "sepIdx" as local var.
	  - Update its value from saveSegment() return value.
	* src/maxwordseg.h (class MaxWordSeg):
	  - Drop "sepIdx" member.

2012-01-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/maxwordseg.h, src/maxwordseg.cpp (MaxWordSeg::MaxWordSeg):
	  - Drop unused "noAmbArea" member.

2012-01-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/maxwordseg.h:
	  - Rearrange member declarations.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.h:
	  - Rearrange member declarations.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/dictpath.h:
	* src/wordstack.h:
	* src/worddef.h:
	* src/abswordseg.h:
	* src/longwordseg.h:
	* src/maxwordseg.h:
	  - Adjust repeated-inclusion-preventing preprocessor style for
	    consistency.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterrtf.cpp (FilterRTF::FilterRTF):
	  - Initialize members with initialization list where possible.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterrtf.h:
	  - More member declaration rearrangement.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterhtml.h, src/filterhtml.cpp:
	* src/filterrtf.h, src/filterrtf.cpp:
	  - Rearrange member declarations.
	  - Drop the empty d-tor.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.h, src/filterlatex.cpp:
	  - Drop the empty d-tor.
